src/main/kotlin/com/example/demka/shared/errors/common/NotFoundError.kt
package ru.umom.hackaton.shared.errors.common

class NotFoundError(override val message: String) : RuntimeException()